Ajout de la nav

--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     <h1>Bienvenue sur meresse.info</h1>
+    <nav>
+        <ul>
+            <li><a href="#">Lorem, ipsum.</a></li>
+            <li><a href="#">Lorem, ipsum.</a></li>
+            <li><a href="#">Lorem, ipsum.</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
